<?xml version="1.0"?>
<package format="2">
  <name>hw1</name>
  <version>1.0.0</version>
  <description>The hw1 package</description>
  <maintainer email="lexandr.bychkov@gmail.com">sign5</maintainer>
  <license>MIT</license>
  <depend>rospy</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
